--- a/categories.html
+++ b/categories.html
@@ -4,6 +4,7 @@
 
         <title>Sonny's Blog</title>
         <meta charset="utf-8" />
+        <link href="https://sonnycruz.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sonny's Blog Full Atom Feed" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
@@ -43,7 +44,6 @@
             </div>
 
 <ul>
-    <li><a href="./category/pelican-python.html">pelican; python</a></li>
 </ul>
 
        </div><!-- /.row -->
