--- a/authors.html
+++ b/authors.html
@@ -4,7 +4,6 @@
 
         <title>Sonny's Blog - Authors</title>
         <meta charset="utf-8" />
-        <link href="https://sonnycruz.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sonny's Blog Full Atom Feed" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
@@ -45,6 +44,7 @@
 
     <h1>Authors on Sonny's Blog</h1>
     <ul>
+        <li><a href="./author/sonny-torres.html">Sonny Torres</a> (1)</li>
     </ul>
 
        </div><!-- /.row -->
