--- a/pages/about.html
+++ b/pages/about.html
@@ -45,12 +45,12 @@
     <h1>About Me</h1>
     
 
-    <p>My name is Sonny Torres and I am an analyst and self-taught programmer who currently lives in the Dallas-Fort Worth metroplex.</p>
-<p>In 2015 I graduated from the University of North Texas with a Bachelors Degree in Finance. What attracted me to Finance was the equity market's complexity, abundance of data and the analysis required to understand the data.</p>
-<p>Most people familiar with finance investing will tell you that unless you have a PhD in a hard science, can write extremely complex models in C++ AND are equiped with the various resources that come with working at a multi-billion dollar hedge fund...you will likely fail at making money in the stock market. To quote Will Ferrell in The Other Guys, &quot;You are outgunned and outmanned.&quot; The experts will tell the layman that your best chance at making a modest return in the stock market is to invest in an index fund, spend conservatively and wait 30+ years for your investments to appreciate.</p>
-<p>Nonetheless, my love for complex financial data remained strong and I landed a job as an analyst at a small financial consulting company that specializes in securitized commercial real estate loans. In this role I have gained invaluable experience with manipulating large data sets and modeling commercial property cash flows.</p>
-<p>After pushing the limits of excel, I decided to commit to learning how to program in December 2016 and it has been a very rewarding (and challenging!) journey.</p>
-<p>My goal for this blog is to showcase what I have learned, document my future programming journey and for it to be a resource for other budding programmers who are interested in data science. Feel free to contact me.</p>
+    <p><strong>Who I Am</strong>
+My name is Sonny Torres and I am currently a commercial real estate analyst and programmer who lives in the Dallas-Fort Worth metroplex.</p>
+<p><strong>Why Data Science?</strong>
+In 2015 I graduated from the University of North Texas with a Bachelors Degree in Finance. What attracted me to Finance was the abundance of complex data involved in the stock market and the analysis required to understand the data. My love for making sense of data lead me to work as an analyst at a small financial consulting company that specializes in securitized commercial real estate loans. In this role I have gained invaluable experience with manipulating data in many different ways.After pushing the limits of excel, I decided to commit to learning how to program in December 2016 and it has been a very rewarding (and challenging!) journey.</p>
+<p><strong>Going forward</strong>
+My goal for this blog is to showcase what I have learned and document my ongoing journey as an aspiring Data Scientist. Feel free to contact me.</p>
 
 
        </div><!-- /.row -->
