--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <ul class="columns">
                 <li><a href="./">Home</a></li>
 
-                <li><a href="./pages/about.html">About Me</a></li>
+                <li><a href="./pages/about-mw.html">About Me</a></li>
 
               </ul>
             </div>
@@ -86,7 +86,7 @@
 <h4>Pages</h4>
 
  <ul>
-      <li><a href="./pages/about.html">About Me</a></li>
+      <li><a href="./pages/about-mw.html">About Me</a></li>
   </ul>
 
 
