--- a/categories.html
+++ b/categories.html
@@ -37,7 +37,7 @@
               <ul class="columns">
                 <li><a href="./">Home</a></li>
 
-                <li><a href="./pages/about.html">About Me</a></li>
+                <li><a href="./pages/about-mw.html">About Me</a></li>
 
               </ul>
             </div>
