--- a/authors.html
+++ b/authors.html
@@ -4,6 +4,7 @@
 
         <title>Sonny's Blog - Authors</title>
         <meta charset="utf-8" />
+        <link href="https://sonnycruz.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sonny's Blog Full Atom Feed" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
