--- a/authors.html
+++ b/authors.html
@@ -45,6 +45,7 @@
 
     <h1>Authors on Sonny's Blog</h1>
     <ul>
+        <li><a href="./author/sonny-torres.html">Sonny Torres</a> (1)</li>
     </ul>
 
        </div><!-- /.row -->
