--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="">
         <link rel="icon" href="./favicon.ico">
 
-        <title> - Sonny's Blog</title>
+        <title>Homepage - Sonny's Blog</title>
 
         <!-- Stylesheets -->
         <link href="./theme/css/bootstrap.min.css" rel="stylesheet">
@@ -34,16 +34,16 @@
     <body>
 
         <!-- Header -->
-    <div class="header-container gradient">
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('./images/background.jpg'); background-position: center; background-size: cover;">
 
             <!-- Static navbar -->
             <div class="container">
                 <div class="header-nav">
                     <div class="header-logo">
-                        <a class="pull-left" href="./"><img class="mr20" src="./logo.svg" alt="logo">Sonny's Blog</a>
+                        <a class="pull-left" href="./"><img class="mr20" src="./images/blank.png" alt="logo">Sonny's Blog</a>
                     </div>
                     <div class="nav pull-right">
-                            <a  href="./pages/about-mw.html">About Me</a>
+                            <a  href="./pages/about-me.html">About Me</a>
                     </div>
                 </div>
             </div>
@@ -54,8 +54,9 @@
         <div class="row">
               <div class="col-lg-12">
                   <div class="header-content">
-                      <h1 class="header-title"></h1>
+                      <h1 class="header-title">Data Analysis Projects</h1>
                       <div class="header-underline"></div>
+                      <p class="header-subtitle header-subtitle-homepage">Manipulating & Analyzing Data with Programming</p>
                   </div>
               </div>
         </div>
