--- a/tags.html
+++ b/tags.html
@@ -98,8 +98,8 @@
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
                         <div class="footer-title"></div>
                         <ul class="list-unstyled">
-                            <li><a href="https://www.linkedin.com/in/sonny-torres-6738b780" target="_blank">Linkedin</a></li>
-                            <li><a href="#" target="_blank">Another social link</a></li>
+                            <li><a href="" target="_blank"></a></li>
+                            <li><a href="#" target="_blank"></a></li>
                         </ul>
                     </div>
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
@@ -108,7 +108,7 @@
                             <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
                             <li><a href="http://python.org/" target="_blank">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
-                            <li><a href="#" target="_blank">You can modify those links in your config file</a></li>
+                            <li><a href="#" target="_blank"></a></li>
                         </ul>
                     </div> 
                     <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
