--- a/tags.html
+++ b/tags.html
@@ -34,7 +34,7 @@
     <body>
 
         <!-- Header -->
-    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('./images/background.jpg'); background-position: center; background-size: cover;">
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('./images/art-artistic-background-247676.jpg'); background-position: center; background-size: cover;">
 
             <!-- Static navbar -->
             <div class="container">
@@ -74,9 +74,9 @@
             <dl class="dl-horizontal">
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="./tag/beautifulsoup.html">beautifulsoup</a></dd>
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="./tag/python.html">python</a></dd>
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="./tag/tutorial.html">tutorial</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="./tag/webscraping.html">webscraping</a></dd>
@@ -105,9 +105,9 @@
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
                         <div class="footer-title"></div>
                         <ul class="list-unstyled">
-                            <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-                            <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
+                            <li><a href="linkedin.com/in/sonny-torres-6738b780" target="_blank">LinkedIn</a></li>
+                            <li><a href="https://github.com/sonnycruz" target="_blank">Github</a></li>
+                            <li><a href="https://twitter.com/sonnyctorres" target="_blank">Twitter</a></li>
                             <li><a href="#" target="_blank"></a></li>
                         </ul>
                     </div> 
