--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -6,15 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Who I Am My name is Sonny Torres and I am currently a commercial real estate analyst and programmer who lives in the Dallas-Fort Worth metroplex. Data &amp; Programming In 2015 I graduated from the...">
         <meta name="keywords" content="">
-        <link rel="icon" href="https://sonnycruz.github.io/favicon.ico">
+        <link rel="icon" href="../favicon.ico">
 
         <title>About Me - Sonny's Blog</title>
 
         <!-- Stylesheets -->
-        <link href="https://sonnycruz.github.io/theme/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://sonnycruz.github.io/theme/css/fonts.css" rel="stylesheet">
-        <link href="https://sonnycruz.github.io/theme/css/nest.css" rel="stylesheet">
-        <link href="https://sonnycruz.github.io/theme/css/pygment.css" rel="stylesheet">
+        <link href="../theme/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../theme/css/fonts.css" rel="stylesheet">
+        <link href="../theme/css/nest.css" rel="stylesheet">
+        <link href="../theme/css/pygment.css" rel="stylesheet">
         <!-- /Stylesheets -->
 
         <!-- RSS Feeds -->
@@ -34,16 +34,16 @@
     <body>
 
         <!-- Header -->
-    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('https://sonnycruz.github.io/images/art-artistic-background-247676.jpg'); background-position: center; background-size: cover;">
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../images/art-artistic-background-247676.jpg'); background-position: center; background-size: cover;">
 
             <!-- Static navbar -->
             <div class="container">
                 <div class="header-nav">
                     <div class="header-logo">
-                        <a class="pull-left" href="https://sonnycruz.github.io/"><img class="mr20" src="https://sonnycruz.github.io/images/blank.png" alt="logo">Sonny's Blog</a>
+                        <a class="pull-left" href="../"><img class="mr20" src="../images/blank.png" alt="logo">Sonny's Blog</a>
                     </div>
                     <div class="nav pull-right">
-                            <a  class="active" href="https://sonnycruz.github.io/pages/about-me.html">About Me</a>
+                            <a  class="active" href="../pages/about-me.html">About Me</a>
                     </div>
                 </div>
             </div>
