--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -18,6 +18,7 @@
         <!-- /Stylesheets -->
 
         <!-- RSS Feeds -->
+        <link href="https://sonnycruz.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sonny's Blog Full Atom Feed" />
         <!-- /RSS Feeds -->
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -73,11 +74,11 @@
 </div>
 <div class="section" id="data-programming">
 <h2><strong>Data &amp; Programming</strong></h2>
-<p>In 2015 I graduated from the University of North Texas with a Bachelors Degree in Finance. What attracted me to Finance was the abundance of complex data involved in the Stock Market and the analysis required to understand the data. My love for making sense of data lead me to commit to learning how to program in December 2016 and it has been a very rewarding (and challenging!) journey.</p>
+<p>In 2015 I graduated from the University of North Texas with a Bachelors Degree in Finance. I became interested in Finance because the stock market seemed interestinng and my desire to understand the financial crisis of 2008. I have found that I enjoy making sense of data, building tools and learning how to use different technologies. The limitations of Excel lead me to commit to learning how to program in December 2016 and it has been a very rewarding (and challenging!) journey.</p>
 </div>
 <div class="section" id="going-forward">
 <h2><strong>Going forward</strong></h2>
-<p>My goal for this blog is to showcase what I have learned and document my ongoing journey as an aspiring Data Scientist. Feel free to contact me.</p>
+<p>My goal for this blog is to showcase what I have learned and to  document my ongoing journey as an aspiring Software Engineer. Feel free to contact me.</p>
 </div>
 
     </div>
@@ -90,6 +91,7 @@
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
                         <div class="footer-title"></div>
                         <ul class="list-unstyled">
+                            <li><a href="https://sonnycruz.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"></a></li>
                         </ul>
                     </div>
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
