--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -74,7 +74,7 @@
 </div>
 <div class="section" id="data-programming">
 <h2><strong>Data &amp; Programming</strong></h2>
-<p>In 2015 I graduated from the University of North Texas with a Bachelors Degree in Finance. I became interested in Finance because the stock market seemed interesting and my I wanted to understand the financial crisis of 2008. I have found that I enjoy making sense of data, building tools and learning how to use different technologies. The limitations of Excel lead me to commit to learning how to program in December 2016 and it has been a very rewarding (and challenging!) journey.</p>
+<p>In 2015 I graduated from the University of North Texas with a Bachelors Degree in Finance. I became interested in Finance because the stock market seemed interesting and I wanted to understand the financial crisis of 2008. I have found that I enjoy making sense of data, building tools and learning how to use different technologies. The limitations of Excel lead me to commit to learning how to program in December 2016 and it has been a very rewarding (and challenging!) journey.</p>
 </div>
 <div class="section" id="going-forward">
 <h2><strong>Going forward</strong></h2>
